Next release:
- use js_of_ocaml.ppx instead of camlp4 extension
- use -g flag everywhere

Release 0.16.0:
- move to uutf 1.0.0

Release 0.15.0:
- use Re library rather than Str (in Xtmpl_rewrite) and
  Jsoo's Regexp (in Xtmpl_js) to simplify code
- Xtmpl_js.dom_of_html: add optional ?doc parameter to specify
  the root document (default is Dom_html.document)
- Fix generated types from templates

Release 0.14.0:
- fix: remove special attributes when converting Xtmpl_rewrite.tree
  to Xtmpl_xml.tree
- upgrade to ocaml 4.03.0 + replace deprecated stdlib functions

Release 0.13.0:
- include own XML parser, keeping locations (do not depend on Xmlm any more,
  but now requires sedlex and uutf packages)
- big interface change (with modules Xtmpl_xml, Xtmpl_rewrite, ...)
- new package xtmpl.ppx (ppx instruction for ocamlfind not included in xtmpl
  package any more)
- no main_ tag any more

Release 0.12:
- fix Xtmpl_js.Dom_of_xtmpl to unescape xml in attributes, using
  Regexp module of Js_of_ocaml

Release 0.11:
- add ppx_xtmpl: this preprocessor creates functions from template
  files or strings, with the parameters described in the template.
  Usage: let doc = [%xtmpl "file.xml"]
         let doc = [%xtmpl.string {| <div>...</div> |} ]
- some functions renamed (deprecating original ones functions)
- add Xtmpl.node, Xtmpl.cdata
- new Xtmpl_xhtml module, with convenient functions to create Xhtml trees
- new package Xtmpl.js, with a Xtmpl_js module

Release 0.10:
  - use safe-string mode
  - new parameter ~xml_atts for Xtmpl.string_of_{xml,xmls,xml_atts}
    to indicate whether or not to keep valid XML in attributes when
    printing an XML tree. Default is true, to be backward-compatible.
    When it is true, Xtmpl tries to unescape some entities. Only
    lt, gt, amp, quot and apos named entities are unescaped.
    When an entity is given by its character code, only the ones
    with code between 0 and 255 are unescaped.

Release 0.9:
  - Add Xtmpl.merge_cdata