@@ -29,7 +29,7 @@ VERSION=0.16.0
 OCAMLFIND=ocamlfind
 OCAMLC=ocamlc -g
 OCAMLOPT=ocamlopt -g
-PACKAGES=sedlex,uutf,re.str
+PACKAGES=sedlex,uutf,re.str,iri
 JS_PACKAGES=$(PACKAGES),js_of_ocaml
 COMPFLAGS=-annot -rectypes -safe-string
 OCAMLPP=
